# alpha-zero-env

./: .gitignore  CMakeLists.txt  setup.py
src/: board_game.h  gomoku.h  libtorch.cpp  libtorch.h  main.cpp  mcts.cpp  mcts.h  thread_pool.h
tests/: config.py  learner.py  test_basic.py  train.py
